Fix: pending reviews showed up in some rare cases. New: option to enable sort-order for Services, backwards compatible for those who do not want it. New: Backend branding allows you to upload your own logo. Font Awesome retina-ready icons for social buttons with option to use old icons instead. New: menu dashicons for services, staff, announcements. New .pot file for localization. Tweak: better style for Reviews form input fields. Enqueue widget stylesheets only when widget is being used on a page. Removed generator tag from head for less markup. Added width and height to wp-login text logo. Darker font-color for options panel text. Fixed alignment for checkboxes in theme options. Updated plugin URI.
git-svn-id: http://plugins.svn.wordpress.org/quick-business-website/trunk@869655 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/widgets/sfs.css
+++ b/widgets/sfs.css
@@ -1,1 +1,38 @@
-﻿#sfswrap{width:100%;overflow:hidden;position:relative;padding-bottom:21px;border-bottom:1px #e5e5e5 solid;margin-bottom:20px}#sfsfig{float:left;margin:0 20px 0 0;width:25%;max-width:100px}.front-widgets #sfsfig{width:auto;max-width:100%}#sfscontent{overflow:hidden;padding-right:15px}#sfscontent h4{margin-bottom:1em}.widget_smartest_featured_services .widget-title{margin-left:0}#sidebar #sfsfig,#first .footer-widget #sfsfig,#third .footer-widget #sfsfig{float:none}@media screen and (max-device-width:568px){#sfsfig{float:none;margin:0}}
+﻿#sfswrap{
+	width:100%;
+	overflow:hidden;
+	position:relative;
+	padding-bottom:21px;
+	border-bottom:1px #e5e5e5 solid;
+	margin-bottom:20px
+}
+#sfsfig{
+	float:left;
+	margin:0 20px 0 0;
+	width:25%;
+	max-width:100px
+}
+/* Thin out for TwentyFourteen thin sidebars */
+#footer-sidebar #sfsfig, #primary-sidebar #sfsfig, .front-widgets #sfsfig{
+	width:auto;
+	max-width:100%
+}
+#footer-sidebar #sfsfig, #primary-sidebar #sfsfig {float:none;margin: 0;}
+#sfscontent{
+	overflow:hidden;
+}
+#sfscontent h4{
+	margin-bottom:1em
+}
+.widget_smartest_featured_services .widget-title{
+	margin-left:0
+}
+#sidebar #sfsfig,#first .footer-widget #sfsfig,#third .footer-widget #sfsfig{
+	float:none
+}
+@media screen and (max-device-width:568px){
+	#sfsfig{
+		float:none;
+		margin:0
+	}
+}
